# octon

./: .cursorindexingignore  .gitattributes  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Dockerfile.warp-env  PHASE_B_SHADOW_BAD_COMMIT.md  README.md  commitlint.config.cjs  eslint.config.js  langgraph.json  package.json  pnpm-lock 2.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.base.json  turbo.json
.design-packages/: README.md  registry.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.harmony/: AGENTS.md  CHARTER.md  README.md  START.md  catalog.md  conventions.md  harmony.yml  init.sh  scope.md
.harmony/capabilities/runtime/services/interfaces/kv/rust/: Cargo.toml
.harmony/capabilities/runtime/services/interfaces/kv/rust/src/: lib.rs
.harmony/engine/runtime/crates/policy_engine/: Cargo.toml
.harmony/engine/runtime/crates/policy_engine/src/: lib.rs
.harmony/engine/runtime/crates/policy_engine/tests/: policy_engine.rs
.harmony/engine/runtime/crates/policy_engine/tests/fixtures/: policy.yml  service-allow.SERVICE.md  service-unscoped-bash.SERVICE.md  skill-allow.SKILL.md  skill-caller-allow.SKILL.md  skill-caller-deny.SKILL.md  skill-caller-unknown.SKILL.md  skills-manifest.yml
.harmony/engine/runtime/crates/studio/: Cargo.toml  README.md
.harmony/engine/runtime/crates/studio/src/: app_state.rs  main.rs  staging.rs
.harmony/engine/runtime/crates/studio/src/workflows/: load.rs  validate.rs
.harmony/engine/runtime/crates/studio/ui/: app.slint
.harmony/engine/runtime/crates/wasm_host/: Cargo.toml
.harmony/engine/runtime/crates/wasm_host/src/: bindings.rs  host.rs  host_api.rs  invoke.rs  kv_store.rs  lib.rs  run_component.rs  state.rs
.history/: Universal Skills implementation Review.txt
.octon/: AGENTS.md  CHARTER.md  OBJECTIVE.md  README.md  START.md  catalog.md  conventions.md  init.sh  octon.yml  scope.md
.octon/framework/engine/runtime/crates/: Cargo.toml
.octon/framework/engine/runtime/crates/.cargo/: config.toml
.octon/framework/engine/runtime/crates/assurance_tools/: Cargo.toml
.octon/framework/engine/runtime/crates/assurance_tools/src/: ci_latency.rs  main.rs
.octon/framework/engine/runtime/crates/assurance_tools/tests/fixtures/umbrella/: context.ci.yml  weights.umbrella.yml
.octon/framework/engine/runtime/crates/authority_engine/: Cargo.toml
.octon/framework/engine/runtime/crates/authority_engine/src/: implementation.rs  lib.rs
.octon/framework/engine/runtime/crates/authority_engine/src/implementation/: api.rs  authority.rs  autonomy.rs  common.rs  effects.rs  execution.rs  policy.rs  records.rs  runtime_state.rs  support.rs  tests.rs
.octon/framework/engine/runtime/crates/authority_engine/src/phases/: mod.rs  preflight.rs  receipt.rs  results.rs  routing.rs
.octon/framework/engine/runtime/crates/authorized_effects/: Cargo.toml
.octon/framework/engine/runtime/crates/authorized_effects/src/: lib.rs
.octon/framework/engine/runtime/crates/core/: Cargo.toml
.octon/framework/engine/runtime/crates/core/src/: config.rs  discovery.rs  errors.rs  execution_integrity.rs  jsonlines.rs  orchestration.rs  root.rs  schema.rs  tiers.rs  trace.rs
.octon/framework/engine/runtime/crates/kernel/: Cargo.toml
.octon/framework/engine/runtime/crates/kernel/src/: authorization.rs  context.rs  lifecycle.rs  lifecycle_driver.rs  lifecycle_program.rs  main.rs  orchestration.rs  pipeline.rs  request.rs  run_binding.rs  scaffold.rs  stdio.rs  workflow.rs
.octon/framework/engine/runtime/crates/kernel/src/commands/: engagement.rs  evolution.rs  mission.rs  mod.rs  stewardship.rs  trust.rs
.octon/framework/engine/runtime/crates/kernel/src/request_builders/: mod.rs
.octon/framework/engine/runtime/crates/kernel/src/side_effects/: mod.rs
.octon/framework/engine/runtime/crates/lifecycle_executor/: Cargo.toml
.octon/framework/engine/runtime/crates/lifecycle_executor/src/: adapter.rs  approval.rs  auto.rs  claude.rs  codex.rs  errors.rs  generated.rs  input_binding.rs  lib.rs  mock.rs  observer.rs  prompt_bundle.rs  request.rs  result.rs  workflow_leaf.rs
.octon/framework/engine/runtime/crates/lifecycle_executor/tests/: adapter.rs
.octon/framework/engine/runtime/crates/policy_engine/: Cargo.toml
.octon/framework/engine/runtime/crates/policy_engine/src/: lib.rs
.octon/framework/engine/runtime/crates/policy_engine/tests/: policy_engine.rs
.octon/framework/engine/runtime/crates/policy_engine/tests/fixtures/: policy.yml  preflight_allow.golden.json  preflight_deny_unscoped_bash.golden.json  service-allow.SERVICE.md  service-unscoped-bash.SERVICE.md  services-manifest.yml  skill-allow.SKILL.md
.octon/framework/engine/runtime/crates/replay_store/: Cargo.toml
.octon/framework/engine/runtime/crates/replay_store/src/: lib.rs
.octon/framework/engine/runtime/crates/runtime_bus/: Cargo.toml
.octon/framework/engine/runtime/crates/runtime_bus/src/: lib.rs
.octon/framework/engine/runtime/crates/runtime_resolver/: Cargo.toml
.octon/framework/engine/runtime/crates/runtime_resolver/src/: handles.rs  lib.rs
.octon/framework/engine/runtime/crates/studio/: Cargo.toml  README.md
.octon/framework/engine/runtime/crates/studio/src/: app_state.rs  main.rs  staging.rs
.octon/framework/engine/runtime/crates/studio/src/workflows/: load.rs  validate.rs
.octon/framework/engine/runtime/crates/studio/ui/: app.slint
.octon/framework/engine/runtime/crates/telemetry_sink/: Cargo.toml
.octon/framework/engine/runtime/crates/telemetry_sink/src/: lib.rs
.octon/framework/engine/runtime/crates/wasm_host/src/: bindings.rs  cancel.rs  host.rs  host_api.rs  invoke.rs  kv_store.rs  scoped_fs.rs
.octon/ideation/projects/executable-layer/.octon/runtime/crates/kernel/: Cargo.toml
.octon/ideation/projects/executable-layer/.octon/runtime/crates/kernel/src/: context.rs  main.rs  scaffold.rs  stdio.rs
.proposals/: README.md  registry.yml
.workspace/: START.md  agent-autonomy-guard.globs  catalog.md  conventions.md  init.sh  scope.md
docs/: DAILY-FLOW.md  GLOSSARY.md  (+15 more)
(+18217 files in other folders)
