[package]
name = "harmony_wasm_host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
libc.workspace = true

wasmtime.workspace = true
wasmtime-wasi.workspace = true

# Host-side component bindings.
wit-bindgen.workspace = true
wit-bindgen-rt.workspace = true

# Sandbox FS
glob.workspace = true

harmony_core = { path = "../core" }
