[workspace]
resolver = "2"
members = [
  "core",
  "runtime_resolver",
  "authority_engine",
  "wasm_host",
  "kernel",
  "studio",
  "assurance_tools",
  "policy_engine",
  "replay_store",
  "telemetry_sink",
  "runtime_bus",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
jsonschema = { version = "0.17", features = ["draft202012"] }
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
semver = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

# Wasmtime + WASI Preview2 + component bindgen.
wasmtime = { version = "29", features = ["component-model"] }
wasmtime-wasi = { version = "29" }
wit-bindgen = "0.26"
wit-bindgen-rt = "0.26"

glob = "0.3"
parking_lot = "0.12"
