[package]
name = "octon_assurance_tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "octon-assurance"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
hex.workspace = true
time.workspace = true
