[package]
name = "octon_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
jsonschema.workspace = true
walkdir.workspace = true
semver.workspace = true
sha2.workspace = true
hex.workspace = true
time.workspace = true
uuid.workspace = true
parking_lot.workspace = true

octon_runtime_resolver = { path = "../runtime_resolver" }
