[package]
name = "octon_lifecycle_executor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
walkdir.workspace = true

octon_runtime_resolver = { path = "../runtime_resolver" }
