[package]
name = "octon_runtime_resolver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
time.workspace = true
