[package]
name = "octon_studio"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "octon-studio"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
slint = "1.15.1"
octon_core = { path = "../core" }

[build-dependencies]
slint-build = "1.15.1"
